c++:swig: Require swig version 4.1.0 for go and pygensio
Both go and pygensio require the newest version of swig, hopefully to be
released soon.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/Makefile.am
+++ b/c++/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = include lib $(SWIG_DIR) tests examples
+SUBDIRS = include lib $(SWIG_CPP_DIR) tests examples
 
 DIST_SUBDIRS = include lib swig tests examples
 
