keepopen: Add a gensio to simulate a lower-layer gensio staying open
With this gensio, if the lower layer gets an error this gensio will just
retry an open periodically and not report the error to the upper layer.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -31,7 +31,7 @@ libgensio_la_SOURCES = \
 	gensio_addrinfo.c gensio_stdsock.c \
 	gensio_filter_kiss.c gensio_kiss.c \
 	crc16.c gensio_ax25_addr.c gensio_ax25.c \
-	gensio_filter_xlt.c gensio_xlt.c
+	gensio_filter_xlt.c gensio_xlt.c gensio_keepopen.c
 
 if HAVE_UNIX_OS
 libgensio_la_SOURCES += gensio_unix.c selector.c
