cmake: Fix install lib directory
Use CMAKE_INSTALL_LIBDIR, not just plain "lib".

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/lib/CMakeLists.txt
+++ b/c++/lib/CMakeLists.txt
@@ -10,11 +10,11 @@ if(BUILD_SHARED_LIBS AND ALSOSTATIC)
   add_library(gensiocpp-static STATIC ${CPPLIBFILES})
   SET_TARGET_PROPERTIES(gensiocpp-static PROPERTIES OUTPUT_NAME gensiocpp
                         CLEAN_DIRECT_OUTPUT 1)
-  install(TARGETS gensiocpp-static DESTINATION lib)
+  install(TARGETS gensiocpp-static DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
-set_property(TARGET gensiocpp PROPERTY VERSION 0.0.0)
-set_property(TARGET gensiocpp PROPERTY SOVERSION 0)
-install(TARGETS gensiocpp DESTINATION lib EXPORT gensiocpp)
+set_property(TARGET gensiocpp PROPERTY VERSION 1.1.0)
+set_property(TARGET gensiocpp PROPERTY SOVERSION 1)
+install(TARGETS gensiocpp DESTINATION ${CMAKE_INSTALL_LIBDIR} EXPORT gensiocpp)
 configure_file(libgensiocpp.pc.in libgensiocpp.pc @ONLY)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libgensiocpp.pc
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
