--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -79,13 +79,13 @@ if(BUILD_SHARED_LIBS AND ALSOSTATIC)
   add_library(gensio-static STATIC ${LIBFILES})
   SET_TARGET_PROPERTIES(gensio-static PROPERTIES OUTPUT_NAME gensio
                         CLEAN_DIRECT_OUTPUT 1)
-  install(TARGETS gensio-static DESTINATION lib)
+  install(TARGETS gensio-static DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
 target_link_libraries(gensio ${EXTRA_LIBS})
-set_property(TARGET gensio PROPERTY VERSION 0.0.0)
+set_property(TARGET gensio PROPERTY VERSION 0.1.0)
 set_property(TARGET gensio PROPERTY SOVERSION 0)
 
-install(TARGETS gensio DESTINATION lib EXPORT gensio)
+install(TARGETS gensio DESTINATION ${CMAKE_INSTALL_LIBDIR} EXPORT gensio)
 install(EXPORT gensio FILE gensio.cmake DESTINATION lib/cmake/gensio)
 set_target_properties(gensio PROPERTIES COMPILE_FLAGS "-DBUILDING_GENSIO_DLL")
 if (WIN32)
