win: Add pty support for windows.
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -744,8 +744,13 @@ AC_CHECK_HEADER(sys/un.h, [HAVE_UNIX=1] )
 AC_SUBST(HAVE_UNIX)
 AC_DEFINE_UNQUOTED([HAVE_UNIX], [$HAVE_UNIX], [Enable unix socket handling])
 
-HAVE_PTY=0
-AC_CHECK_FUNCS(posix_openpt, [HAVE_PTY=1])
+if test "$version_type" = "windows"; then
+   # We have PTY support for windows.
+   HAVE_PTY=1
+else
+   HAVE_PTY=0
+   AC_CHECK_FUNCS(posix_openpt, [HAVE_PTY=1])
+fi
 AC_SUBST(HAVE_PTY)
 AC_DEFINE_UNQUOTED([HAVE_PTY], [$HAVE_PTY], [Enable PTY gensio])
 
