--- a/configure.ac
+++ b/configure.ac
@@ -753,15 +753,18 @@ AC_CHECK_HEADER(sys/un.h, [HAVE_UNIX=1] )
 AC_SUBST(HAVE_UNIX)
 AC_DEFINE_UNQUOTED([HAVE_UNIX], [$HAVE_UNIX], [Enable unix socket handling])
 
+EXTRA_WINDOWS_USER_LIBS=
 if test "$version_type" = "windows"; then
    # We have PTY support for windows.
    HAVE_PTY=1
+   EXTRA_WINDOWS_USER_LIBS="-lsecur32 -luserenv"
 else
    HAVE_PTY=0
    AC_CHECK_FUNCS(posix_openpt, [HAVE_PTY=1])
 fi
 AC_SUBST(HAVE_PTY)
 AC_DEFINE_UNQUOTED([HAVE_PTY], [$HAVE_PTY], [Enable PTY gensio])
+AC_SUBST(EXTRA_WINDOWS_USER_LIBS)
 
 AM_CONDITIONAL([HAVE_UNIX_OS], [test ${system_type} != windows])
 AM_CONDITIONAL([HAVE_WINDOWS_OS], [test ${system_type} = windows])
