osops: Pull netif functions into their own include file
Don't make users include gensio_osops.h to get these, gensio_osops is
really only for internals.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/include/gensio/Makefile.am
+++ b/include/gensio/Makefile.am
@@ -8,6 +8,6 @@ pkginclude_HEADERS = gensio.h gensio_class.h sergensio.h sergensio_class.h \
 	gensio_osops_addrinfo.h gensio_osops_stdsock.h gensio_circbuf.h \
 	gensio_selector.h gensio_win.h gensio_osops_env.h \
 	gensio_os_funcs_public.h gensio_time.h gensio_ax25_addr.h \
-	gensio_control.h
+	gensio_control.h netif.h
 
 EXTRA_DIST = gensio_version.h.in CMakeLists.txt
