c++:swig:go: Fix go compile flags
Use the generic ones, the hand-coded ones that were there were wrong and
unmaintainable.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/go/examples/Makefile.am
+++ b/c++/swig/go/examples/Makefile.am
@@ -18,8 +18,8 @@ go.mod: example.go
 	go mod edit -replace $(GOMOD)=../gensio
 	go mod tidy
 
-export CGO_CXXFLAGS = $(CXXFLAGS) -I$(abs_top_srcdir)/c++/include
-export CGO_CPPFLAGS = -I$(abs_top_srcdir)/include -I$(abs_top_builddir)/include
+export CGO_CXXFLAGS = $(CXXFLAGS) $(AM_CXXFLAGS)
+export CGO_CPPFLAGS = $(CPPFLAGS)
 export CGO_LDFLAGS = -L$(abs_top_builddir)/c++/lib/.libs -lgensiocpp -L$(abs_top_builddir)/lib/.libs -lgensio
 
 example: ../gensio/gensio.go \
