osops: Move win_get_user to osops and rename
Make it gensio_win_get_user_token().  This will allow the pty code to do
a logon.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,7 @@ system_type=unix
 case $target_os in
 	mingw*)
 		LIBS="$LIBS -lws2_32 -liphlpapi -lgdi32 -lbcrypt"
+		LIBS="$LIBS -lsecur32 -luserenv -lwtsapi32"
 		uucp_locking_flag=no
 		system_type=windows
 		USE_FILE_STDIO=1
@@ -756,18 +757,15 @@ AC_CHECK_HEADER(sys/un.h, [HAVE_UNIX=1] )
 AC_SUBST(HAVE_UNIX)
 AC_DEFINE_UNQUOTED([HAVE_UNIX], [$HAVE_UNIX], [Enable unix socket handling])
 
-EXTRA_WINDOWS_USER_LIBS=
 if test "$version_type" = "windows"; then
    # We have PTY support for windows.
    HAVE_PTY=1
-   EXTRA_WINDOWS_USER_LIBS="-lsecur32 -luserenv -lwtsapi32"
 else
    HAVE_PTY=0
    AC_CHECK_FUNCS(posix_openpt, [HAVE_PTY=1])
 fi
 AC_SUBST(HAVE_PTY)
 AC_DEFINE_UNQUOTED([HAVE_PTY], [$HAVE_PTY], [Enable PTY gensio])
-AC_SUBST(EXTRA_WINDOWS_USER_LIBS)
 
 AM_CONDITIONAL([HAVE_UNIX_OS], [test ${system_type} != windows])
 AM_CONDITIONAL([HAVE_WINDOWS_OS], [test ${system_type} = windows])
