--- a/tcl/Makefile.am
+++ b/tcl/Makefile.am
@@ -5,11 +5,11 @@ AM_CFLAGS = -I$(top_srcdir)/tcl/include @EXTRA_CFLAGS@
 lib_LTLIBRARIES = libgensiotcl.la
 
 libgensiotcl_la_SOURCES = gensio_tcl.c
-libgensiotcl_la_CFLAGS = $(GLIB_CFLAGS) $(AM_CFLAGS) $(TCL_CFLAGS)
+libgensiotcl_la_CFLAGS = $(TCL_CFLAGS) $(AM_CFLAGS)
 libgensiotcl_la_LIBADD = $(top_builddir)/lib/libgensio.la @OPENSSL_LIBS@ \
-	@GLIB_LIBS@
+	@TCL_LIBS@
 libgensiotcl_la_LDFLAGS = -no-undefined -rpath $(libdir) \
-	-version-info 0:1:0
+	-version-info 0:2:0
 
 SUBDIRS = . $(SWIG_DIR) include $(CPLUSPLUS_DIR)
 DIST_SUBDIRS = swig include c++
