sound: Add a sound gensio
Based on alsa and file I/O

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,17 @@ if(ENABLE_LIBPAM)
   CHECK_INCLUDE_FILE(security/pam_appl.h LIBPAM_INC_FOUND)
   if(LIBPAM_LIB_FOUND AND LIBPAM_INC_FOUND)
     set(HAVE_LIBPAM 1)
+    list(APPEND EXTRA_LIBS pam)
+  endif()
+endif()
+
+option(ENABLE_ALSA "Enable ALSA support" ON)
+if(ENABLE_ALSA)
+  CHECK_LIBRARY_EXISTS(asound "snd_pcm_open" "" ALSA_LIB_FOUND)
+  CHECK_INCLUDE_FILE(alsa/asoundlib.h ALSA_INC_FOUND)
+  if(ALSA_LIB_FOUND AND ALSA_INC_FOUND)
+    set(HAVE_ALSA 1)
+    list(APPEND EXTRA_LIBS asound)
   endif()
 endif()
 
