--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,3 +11,6 @@ if(UNIX)
 add_executable(basic_server_sync_fork basic_server_sync_fork.c)
 target_link_libraries(basic_server_sync_fork gensio)
 endif()
+
+add_executable(sound sound.c)
+target_link_libraries(sound gensio gensiotool)
