--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,7 +141,7 @@ string(COMPARE EQUAL "${CMAKE_HOST_SYSTEM_NAME}" "Linux" HAVE_WORKING_PORT0)
 option(ENABLE_LIBPAM "Enable PAM support" ON)
 if(ENABLE_LIBPAM)
   CHECK_LIBRARY_EXISTS(pam "pam_start" "" LIBPAM_LIB_FOUND)
-  CHECK_INCLUDE_FILE(security/map_appl.h LIBPAM_INC_FOUND)
+  CHECK_INCLUDE_FILE(security/pam_appl.h LIBPAM_INC_FOUND)
   if(LIBPAM_LIB_FOUND AND LIBPAM_INC_FOUND)
     set(HAVE_LIBPAM 1)
   endif()
