tools:gsound: Add help and man page
Also, adjust the gensio.5 man page to refer to gsound.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -49,11 +49,11 @@ gsound_LDADD = $(top_builddir)/lib/libgensio.la ../tools/libgensiotool.a \
 	@OPENSSL_LIBS@
 
 manpages = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1 gtlssync.1 gmdns.1 \
-	greflector.1
+	greflector.1 gsound.1
 
 if INSTALL_DOC
 man1_MANS = gensiot.1 @GTLSSHMAN@ @GTLSSH_KEYGENMAN@ @GTLSSYNCMAN@ @GMDNSMAN@ \
-	greflector.1
+	greflector.1 gsound.1
 man8_MANS = @GTLSSHDMAN@
 endif
 
