tests: Add a ratelimit test
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/gensios_enabled.py.in
+++ b/tests/gensios_enabled.py.in
@@ -23,7 +23,8 @@ gensios_enabled = {
     "conacc": 1,
     "perf": 1,
     "mdns": @HAVE_AVAHI@,
-    "ax25": 1
+    "ax25": 1,
+    "ratelimit": 1
 }
 
 # Gensios that are always last in the list.
